--- a/app/src/main/res/layout/content_activity_add_vet.xml
+++ b/app/src/main/res/layout/content_activity_add_vet.xml
@@ -8,6 +8,18 @@
     tools:context=".ActivityAddVet"
     tools:showIn="@layout/activity_add_vet">
 
+    <Button
+        android:id="@+id/btn_clear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="MtdClear"
+        android:text="Clear"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btn_add_details"
+        app:layout_constraintTop_toBottomOf="@+id/et_bank_details" />
+
     <EditText
         android:id="@+id/et_bank_details"
         android:layout_width="0dp"
@@ -109,4 +121,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_vet_title" />
+
+    <Button
+        android:id="@+id/btn_add_details"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:text="Add Details"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_clear"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_bank_details" />
 </android.support.constraint.ConstraintLayout>
