text hint added for edit text

--- a/app/src/main/res/layout/content_activity_add_vet.xml
+++ b/app/src/main/res/layout/content_activity_add_vet.xml
@@ -28,8 +28,8 @@
         android:layout_marginTop="320dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:hint="Bank Details"
         android:inputType="text"
-        android:text="Bank Details"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,8 +43,8 @@
         android:layout_marginTop="260dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:hint="Email"
         android:inputType="textWebEmailAddress"
-        android:text="Email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,8 +58,8 @@
         android:layout_marginTop="132dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:hint="Mobile Number"
         android:inputType="number|phone"
-        android:text="Mobile Number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,8 +73,8 @@
         android:layout_marginTop="196dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:hint="LandLine Number"
         android:inputType="number|phone"
-        android:text="LandLine Number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,8 +88,8 @@
         android:layout_marginTop="72dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:hint="Company Name"
         android:inputType="textPersonName"
-        android:text="Company Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -116,8 +116,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:hint="Name"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_vet_title" />
