--- a/app/src/main/res/layout/content_activity_add_vet.xml
+++ b/app/src/main/res/layout/content_activity_add_vet.xml
@@ -13,7 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="MtdClear"
-        android:text="Clear"
+        android:text="     Clear     "
+        android:background="@drawable/round_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -127,7 +128,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
-        android:text="Add Details"
+        android:text="     Add Details     "
+        android:background="@drawable/round_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_clear"
         app:layout_constraintHorizontal_bias="0.5"
