--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#FFA000</color>
     <color name="colorAccent">#d81b60</color>
 
-    <color name="black_overlay">#d0edf2</color>
+    <color name="black_overlay">#39afc5</color>
 </resources>
