--- a/app/src/main/res/layout/fragment_horse_wallet.xml
+++ b/app/src/main/res/layout/fragment_horse_wallet.xml
@@ -56,6 +56,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
+        android:onClick="mtd_new_horse"
         android:background="@drawable/round_button"
         android:text="    New horse registration     "
         app:layout_constraintEnd_toEndOf="parent"
